fixing letter spacing in hero

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Gilroy';
 }
 
-/* fonts */
+.index-wrapper {
+  width: 100%;
+  background-color: var(--welcomeWhite);
+}
+
+/* icons */
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -53,22 +58,17 @@ h1, h2, h3, h4, h5, h6 {
   font-feature-settings: 'liga';
 }
 
-/* Rules for sizing the icon. */
+/* Rules for sizing the icons */
 .material-icons.md-18 { font-size: 18px; }
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
 
-/* Rules for using icons as black on a light background. */
+/* Rules for using icons as black on a light background */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
 .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 
-/* elements */
-.index-wrapper {
-  width: 100%;
-  background-color: var(--welcomeWhite);
-}
-
+/* HERO element */
 .swiper-button {
   border-radius: 50%;
   background-color: var(--welcomeWhite);
@@ -83,9 +83,10 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
 }
 
-/* top line */
+/* HOW IT WORKS element */
 .how-it-works-header {
   position: relative;
+  margin-bottom: 68px;
 }
 .how-it-works-header::before {
   content:'';
@@ -96,6 +97,26 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left:0;
 }
+.how-it-works-items-container .how-it-works-icon {
+  border-radius: 50%;
+  background-color: var(--welcomeBlack);
+  padding: 20px;
+  margin-bottom: 26px;
+}
+.how-it-works-items-container h5 {
+  font-size: 18px;
+  letter-spacing: 0.025em;
+  margin-bottom: 32px;
+}
+.how-it-works-item {
+  width: 30%;
+}
+.how-it-works-item p {
+  letter-spacing: 0.025em;
+}
+/* @media screen and (min-width: 851px) {
+  
+} */
 
 @layer components {
   .btn {
